crates/analyzer/tests/snapshots/errors__clone_arg_count.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `clone` expects 0 arguments, but 1 was provided
  ┌─ [snippet]:4:22
  │
4 │   let y: u256[2] = x.clone(y)
  │                      ^^^^^ - supplied 1 argument
  │                      │      
  │                      expects 0 arguments


